fix dropdown visibility over map

--- a/app/assets/stylesheets/map.css
+++ b/app/assets/stylesheets/map.css
@@ -8,6 +8,7 @@ html:has(.map), body:has(.map) {
 }
 
 #map-head {
+  z-index: 1;
   display: flex;
   align-items: center;
   color: white;
@@ -19,8 +20,14 @@ html:has(.map), body:has(.map) {
   font-size: 1.2em;
 }
 
+/* this is an ugly hack for the profile dropdown not to be cut off */
+#dropdown-space {
+  height: 500px;
+}
+
 #map-nav-toggle {
   font-size: 1.3em;
+  cursor: pointer;
 }
 
 .map {
@@ -31,7 +38,6 @@ html:has(.map), body:has(.map) {
   padding: 0;
   text-align: center;
   position: absolute;
-  z-index: -1;
 }
 
 .white-shadow {
